--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
+.header {
+  background-color: aquamarine;
+  width: 100vw;
+  position: relative;
+  margin-left: -50vw;
+  height: 50px;
+  margin-top: 50px;
+  left: 50%;
+}
+body {
+  background-image: url("background.jpg");
+  background-size: 100vw;
+  background-repeat: no-repeat;
+  background-color: #cccccc;
+}
+
 h1 {
   text-align: center;
   font-family: monospace;
@@ -7,4 +23,11 @@ h2 {
   text-align: center;
   font-family: monospace;
   font-weight: 200;
+}
+p {
+  text-align: center;
+  font-family: monospace;
+}
+img {
+  align-content: center;
 }
